# x402-policy-engine

./: LICENSE  README.md  SPEC.md  demo.py  dorahacks-ethmexico-2026.md  ethglobal-cannes-submission.md  gemini_agent.py  google-cloud-rapid-agent-hackathon.md  index.html  pyproject.toml  requirements.txt
mcp-server/: server.py
openclaw-skills/erc8004-id/: SKILL.md
openclaw-skills/tap-resolver/: SKILL.md
openclaw-skills/x402-pay/: SKILL.md
src/: __init__.py  cli.py  dashboard.py  erc8004.py  policy.py  session_keys.py  tap_resolver.py  x402_client.py
